--- a/src/components/BlogPostsLink.astro
+++ b/src/components/BlogPostsLink.astro
@@ -78,6 +78,9 @@ const { heading, posts } = Astro.props
   }
   .blog-posts-link ul li a:hover {
     background-color: #ddd;
+/* サイドバーの記事名をホバー表示させる */
+    position: relative;
+	  width: fit-content;
   }
   .blog-posts-link ul li a span,
   .blog-posts-link ul li a img {
